--- a/src/stories/introduction/Changelog.mdx
+++ b/src/stories/introduction/Changelog.mdx
@@ -2,6 +2,21 @@ import { Meta } from "@storybook/blocks";
 
 <Meta title="Changelog" />
 
+# version: 0.1.2
+2024/09/11 
+### Breaking changes
+* application-content Layouts : Display sections with settings ("cards" | "bordered" | "transparent" | "separated")
+* Adding study folders
+* Rework the Manage Sidebar
+### Additional changes
+* Import Component CardTask
+* Cards CopyLink as parameter
+* Hidding Roles
+* Hidding Pins
+
+
+***
+
 # version: 0.1.1
 2024/09/03 
 ### Breaking changes
