update icons list

--- a/src/stories/Colors.mdx
+++ b/src/stories/Colors.mdx
@@ -11,8 +11,8 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
     colors={{ 
         Initial: 'var(--bg-interactive)', 
         Hover: 'var(--bg-interactive-hover)',
-        Highlight: 'var(--bg-interactive-light)', 
-        HighlightHover: 'var(--bg-interactive-light-hover)',
+        Light: 'var(--bg-interactive-light)', 
+        LightHover: 'var(--bg-interactive-light-hover)',
     }}
   />
   <ColorItem
@@ -52,6 +52,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
     title="Interface"
     colors={{ 
         Default: 'var(--bg-ui)',
+        Hover: 'var(--bg-ui-hover)',
     }}
   />
   <ColorItem
@@ -82,13 +83,6 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
     colors={{ 
         Default: 'var(--bg-highlight)',
         Hover: 'var(--bg-highlight-hover)',
-    }}
-  />
-  <ColorItem
-    title="Hover"
-    subtitle="Hoverable elements"
-    colors={{ 
-        Default: 'var(--bg-ui-hover)',
     }}
   />
 </ColorPalette>
@@ -134,7 +128,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
   <ColorItem
     title="Pink"
     colors={{ 
-        "50": 'hsl(var(--color-pink-050))',
+        "50": 'hsl(var(--color-pink-50))',
         "100": 'hsl(var(--color-pink-100))',
         "200": 'hsl(var(--color-pink-200))',
         "300": 'hsl(var(--color-pink-300))',
@@ -150,7 +144,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
   <ColorItem
     title="Red"
     colors={{ 
-        "50": 'hsl(var(--color-red-050))',
+        "50": 'hsl(var(--color-red-50))',
         "100": 'hsl(var(--color-red-100))',
         "200": 'hsl(var(--color-red-200))',
         "300": 'hsl(var(--color-red-300))',
@@ -166,7 +160,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
   <ColorItem
     title="Orange"
     colors={{ 
-        "50": 'hsl(var(--color-orange-050))',
+        "50": 'hsl(var(--color-orange-50))',
         "100": 'hsl(var(--color-orange-100))',
         "200": 'hsl(var(--color-orange-200))',
         "300": 'hsl(var(--color-orange-300))',
@@ -182,7 +176,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
   <ColorItem
     title="Yellow"
     colors={{ 
-        "50": 'hsl(var(--color-yellow-050))',
+        "50": 'hsl(var(--color-yellow-50))',
         "100": 'hsl(var(--color-yellow-100))',
         "200": 'hsl(var(--color-yellow-200))',
         "300": 'hsl(var(--color-yellow-300))',
@@ -198,7 +192,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
   <ColorItem
     title="Green"
     colors={{ 
-        "50": 'hsl(var(--color-green-050))',
+        "50": 'hsl(var(--color-green-50))',
         "100": 'hsl(var(--color-green-100))',
         "200": 'hsl(var(--color-green-200))',
         "300": 'hsl(var(--color-green-300))',
@@ -214,7 +208,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
   <ColorItem
     title="Teal"
     colors={{ 
-        "50": 'hsl(var(--color-teal-050))',
+        "50": 'hsl(var(--color-teal-50))',
         "100": 'hsl(var(--color-teal-100))',
         "200": 'hsl(var(--color-teal-200))',
         "300": 'hsl(var(--color-teal-300))',
@@ -230,7 +224,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
   <ColorItem
     title="Blue"
     colors={{ 
-        "50": 'hsl(var(--color-blue-050))',
+        "50": 'hsl(var(--color-blue-50))',
         "100": 'hsl(var(--color-blue-100))',
         "200": 'hsl(var(--color-blue-200))',
         "300": 'hsl(var(--color-blue-300))',
@@ -246,7 +240,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
   <ColorItem
     title="Purple"
     colors={{ 
-        "50": 'hsl(var(--color-purple-050))',
+        "50": 'hsl(var(--color-purple-50))',
         "100": 'hsl(var(--color-purple-100))',
         "200": 'hsl(var(--color-purple-200))',
         "300": 'hsl(var(--color-purple-300))',
