--- a/src/stories/Icons.mdx
+++ b/src/stories/Icons.mdx
@@ -9,7 +9,7 @@ import icons from'@schoolab/inject-icons/dist/inject-icons.json';
 # Iconography
 
 <IconGallery>
-  {Object.keys(icons).map((icon) => (
+  {Object.keys(icons).sort().map((icon) => (
     <IconItem name={icon}>
       <Icon name={icon} />
     </IconItem>
