--- a/src/stories/Icons.mdx
+++ b/src/stories/Icons.mdx
@@ -1,233 +1,10 @@
 import { Meta, IconGallery, IconItem } from '@storybook/blocks';
 import { Icon } from "@/app/components/Icon";
+import { renderIconGallery } from '@/app/pages/icons/IconsList';
 import icons from '@schoolab/inject-icons/dist/inject-icons.json';
 
 <Meta title="Iconography" />
 
 # Iconography
 
-<IconGallery>
-  {Object.keys(icons).sort().map((icon) => (
-    <IconItem key={icon} name={icon}>
-      <Icon 
-        name={icon}
-        addClass={
-            [
-                'account-circle',
-                'account-plus',
-                'account',
-                'admin',
-                'ai',
-                'alert-circle',
-                'alert',
-                'arrow-bottom',
-                'arrow-down',
-                'arrow-left',
-                'arrow-right',
-                'arrow-top',
-                'arrow-up',
-                'attachment',
-                'board',
-                'bookmark-outline',
-                'bookmark',
-                'calendar-blank',
-                'calendar',
-                'cancel',
-                'certificate',
-                'chart-line',
-                'chart-pie',
-                'check-circle',
-                'check',
-                'chevron-down',
-                'chevron-left',
-                'chevron-right',
-                'chevron-up',
-                'close-circle',
-                'close',
-                'cloud-download',
-                'coaching',
-                'code',
-                'comment',
-                'community',
-                'console',
-                'content',
-                'copy',
-                'cut',
-                'dashboard',
-                'delete',
-                'download',
-                'drag',
-                'dropdown',
-                'ecosystem-corporate',
-                'ecosystem-startups',
-                'ecosystem-student',
-                'email',
-                'evaluation',
-                'faq',
-                'file-audio-box',
-                'file-csv-box',
-                'file-document-box',
-                'file-excel-box',
-                'file-google-spreadsheet',
-                'file-pdf-box',
-                'file-play-box',
-                'file-powerpoint-box',
-                'file-presentation-box',
-                'file-word-box',
-                'file-zip-box',
-                'filter',
-                'folder',
-                'form-checkbox-marked',
-                'form-checklist',
-                'form-radiobox-marked',
-                'form-redo',
-                'form-select',
-                'form-textarea',
-                'form-textbox',
-                'form-undo',
-                'format-align-center',
-                'format-align-justify',
-                'format-align-left',
-                'format-align-right',
-                'format-bold',
-                'format-clear',
-                'format-color-fill',
-                'format-color-text',
-                'format-italic',
-                'format-list-bulleted',
-                'format-list-numbered',
-                'format-quote',
-                'format-size',
-                'format-strikethrough',
-                'format-title',
-                'format-underlined',
-                'fullscreen-exit',
-                'fullscreen',
-                'help-center',
-                'help',
-                'home',
-                'image-plus',
-                'image',
-                'impact-equitable',
-                'impact-native',
-                'impact-none',
-                'impact-not-obvious',
-                'impact-push',
-                'impact-sustainable',
-                'improve-writing',
-                'information',
-                'label',
-                'language',
-                'learning',
-                'link-off',
-                'link',
-                'loading',
-                'location',
-                'lock-open',
-                'lock',
-                'longer-text',
-                'markdown',
-                'medal',
-                'members',
-                'menu',
-                'minus-circle',
-                'minus',
-                'new-tab',
-                'newsfeed',
-                'notifications-active',
-                'notifications-none',
-                'notifications-off',
-                'notifications-paused',
-                'notifications',
-                'number',
-                'objective',
-                'options',
-                'org',
-                'paste',
-                'pause',
-                'pencil-off',
-                'pencil',
-                'phone',
-                'pin',
-                'plan-data',
-                'plan-native',
-                'play-circle',
-                'play',
-                'plus-circle',
-                'plus',
-                'point',
-                'preview',
-                'program',
-                'project',
-                'public-page',
-                'questionnaire',
-                'rating',
-                'shapes',
-                'release',
-                'restore',
-                'role-admin',
-                'role-expert',
-                'role-jury',
-                'role-manager',
-                'role-participant',
-                'role-visitor',
-                'save',
-                'search',
-                'selection',
-                'send-circle',
-                'send',
-                'service-saml',
-                'settings',
-                'share',
-                'shorter-text',
-                'signature',
-                'sort-ascending',
-                'sort-descending',
-                'spellcheck',
-                'star-outline',
-                'star',
-                'status-bordered',
-                'status-dashed',
-                'status-filled',
-                'status-iddle',
-                'status-stop',
-                'status-warning',
-                'summarize',
-                'summary',
-                'tab',
-                'table',
-                'tag',
-                'text',
-                'thumb-down',
-                'thumb-up',
-                'time',
-                'timeline',
-                'tone',
-                'toolbox',
-                'translate-generate',
-                'translate',
-                'unfold-less',
-                'unfold',
-                'upload',
-                'vertical-dei',
-                'vertical-food',
-                'vertical-plastic',
-                'visibility-off',
-                'visibility',
-                'volume-off',
-                'volume-on',
-                'votes',
-                'work',
-                'youtube',
-                'zoom-minus',
-                'zoom-plus',
-                'room',
-                'database',
-                'circle',
-                'seo',
-            ].includes(icon) ? '' : 'deprecated'
-        }
-    />
-    </IconItem>
-  ))}
-</IconGallery>
+{renderIconGallery(icons)} 
