add MessageBubble, Message, FormComposer components

--- a/src/stories/Content.mdx
+++ b/src/stories/Content.mdx
@@ -7,6 +7,8 @@ import { CardProgram } from "@/app/components/cards/CardProgram";
 
 import "../../public/styles/styles.css";
 
+<Meta title="Content" />
+
 # Content
 This page aims to list how to write in the application as well as list the example data used on the mockups.
 
